Fix Flakey Test Issues (#3097)